--- a/webui/src/scss/responsive.scss
+++ b/webui/src/scss/responsive.scss
@@ -1,6 +1,37 @@
-@media (max-width: 575.98px) {
-	.container{
+@media (max-width: 389.98px) {
+	body {
+		#mainNav {
+
+			.uk-logo {
+				background-color: red;
+			}
+		}
 	}
+
+	.result-container {
+		.prize, .date {
+			font-size: 12px;
+		}
+
+		.latest-title {
+			font-size: 20px !important;
+		}
+
+		label {
+			font-size: 14px;
+		}
+
+		.numbers {
+		    width: 30px;
+		    height: 30px;
+		    font-size: 18px;
+		    line-height: 35px;
+		    margin-right: 10px;
+		}
+	}
+}
+
+@media (max-width: 575.98px) {
 
 	body {
 		#mainNav {
@@ -20,7 +51,7 @@
 		}
 
 		.latest-title {
-			font-size: 30px;
+			font-size: 24px;
 		}
 
 		.prize, .date {
